--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.App {
+  display: flex;
+  justify-content: space-around;
+}
+body {
+  background-color: #161616;
+}
+
+.block {
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 20px;
+}
+img {
+  width: 540px;
+}
+.cartIcon {
+  width: 70px;
+}
+
+.categoryButtonSelected {
+  background-color: green;
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+}
+
+.categoryButton {
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+}
+.categoryButton:hover {
+  background-color: #fdeb6b;
+}
+
+.categoryButtonSelected:hover {
+  background-color: green;
 }
