--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,22 @@ img {
 .categoryButtonSelected:hover {
   background-color: green;
 }
+
+.icon {
+  width: 20px;
+}
+
+p,
+h1,
+h2,
+button {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+}
+
+button {
+  background-color: #fdeb6b;
+  margin-top: 20px;
+  margin-left: 10px;
+  padding: 5px;
+}
